Proxy objects in localisation

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_has_been_set": "Language has been set to English.",
+
   "game_error_incorrectGameID": "Game not found! It may have been cancelled or ended.",
   "game_error_alreadyCreated": "You have already created a game, please cancel it first or wait for autocancel!",
   "game_error_alreadyJoined": "You have already joined a game, please leave it first!",
@@ -30,20 +32,14 @@
   "game_join_success_message": ":white_check_mark: You have successfully joined the game!",
   "game_leave_error_alreadyLeft": "Don't worry, you are already out of the game :wink:",
   "game_leave_success_message": ":ballot_box_with_check: You have successfully left the game.",
+  "game_edit_error_noAccess": "Sorry, you can't edit this game because you aren't its host!",
+  "game_edit_roles_placeHolder": "Select roles...",
+  "game_edit_conditions_placeHolder": "Select game end conditions...",
+  "game_edit_success_message": ":white_check_mark: The game was successfully edited!",
   "start_your_role": "Your role",
   "start_game_info": "Game info:",
   "start_theme": "Theme",
   "start_player_count": "Player count",
-  "start_mafia_count": "Mafia count",
-  "start_doctor_count": "Doctor",
-  "start_police_count": "Policeman",
-  "start_killer_count": "Killer",
-  "start_role_innocent": "Your objective is to survive!",
-  "start_role_mafia": "KILL EVERYONE AND SURVIVE! Good luck! \n Your teammates:",
-  "start_role_doctor": "Your objective is to save people from death!",
-  "start_role_police": "Your objective is to find mafia!",
-  "start_role_killer": "Your objective is to kill everyone and survive!",
-  "start_role_mistress": "string",
 
 
   "wake_up_title": "The city wakes up!",
@@ -56,23 +52,27 @@
   "no_kills_title": "Nobody died!",
   "no_kills_description": "Nobody was killed last night! Perhaps you should thank the doctor?\uD83D\uDE2F",
 
-  "vote_select": "Choose who you want to vote against...",
+  "vote_select": "Select who you want to vote against...",
+  "vote_results_title": "Voting results",
+  "vote_results_tie": ":man_shrugging: Tie vote",
+  "vote_results_ban": " was banned from the city.",
   "role_mafia_name": "Mafia",
-  "role_mafia_placeHolder": "Choose your victim...",
+  "vote_results_expulsion": "",
+  "role_mafia_placeHolder": "Select your victim...",
   "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones:  Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy:  The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
-  "role_killer_placeHolder": "Choose your victim...",
+  "role_killer_placeHolder": "Select your victim...",
   "role_killer_description": "%KILL EVERYONE AND SURVIVE!\n:axe:  Once every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\n:trophy:  You win if no more than one player besides you remains in the city. Spare nobody!%",
   "role_peaceful_name": "Innocent",
-  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales:  Reveal the identities of the villains and achieve their expulsion from the city.\n:trophy:  The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales:  Reveal the identities of the villains and achieve their ban from the city.\n:trophy:  The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_doctor_name": "Doctor",
-  "role_doctor_placeHolder": "Choose who you want to heal...",
+  "role_doctor_placeHolder": "Select who you want to heal...",
   "role_doctor_description": "%You save people's lives! :heart:\n:pill:  Every night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_police_name": "Detective",
-  "role_police_placeHolder": "Choose who you want to check...",
+  "role_police_placeHolder": "Select who you want to check...",
   "role_police_description": "%You investigate crimes in the city! :oncoming_police_car:\n:mag_right:  Every night you check one player and find out if he or she belongs to the mafia.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_mistress_name": "Fancy woman",
-  "role_mistress_placeHolder": "Choose who you want to visit...",
+  "role_mistress_placeHolder": "Select who you want to visit...",
   "role_mistress_description": "%You bring love to this world! And what is love — who knows... :kiss:\n:strawberry:  Every night you visit one of the players. The next day, this player can't be voted out.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
 
   "condition_mafiaWin_name": "Mafia victory condition",
@@ -131,7 +131,7 @@
   "condition_view_error_notFound": "Condition not found!",
   "condition_view_error_noAccess": "Sorry, you can't view this condition!",
 
-  "condition_edit_choose_placeHolder": "Choose a condition to edit...",
+  "condition_edit_select_placeHolder": "Select a condition to edit...",
   "condition_edit_error_notFound": "Condition not found!",
   "condition_edit_error_noAccess": "Sorry, you can't edit this condition!",
   "condition_edit_title": "Condition Editing: ",
@@ -145,9 +145,9 @@
   "condition_edit_embedThumbnail_placeHolder": "your new image link",
   "condition_edit_winRole_label": "Winning Role",
   "condition_edit_winRole_placeHolder": "your new winning role name",
-  "condition_edit_success_message": "The condition was successfully changed:",
+  "condition_edit_success_message": "The condition was successfully edited:",
 
-  "condition_delete_choose_placeHolder": "Choose a condition to delete...",
+  "condition_delete_select_placeHolder": "Select a condition to delete...",
   "condition_delete_error_notFound": "Condition not found!",
   "condition_delete_error_noAccess": "Sorry, you can't delete this condition!",
   "condition_delete_success_message": "The condition was successfully deleted.",
@@ -161,5 +161,15 @@
   "doctor": "doctor",
   "police": "police",
   "killer": "killer",
-  "mistress": "mistress"
+  "mistress": "mistress",
+  "start_mafia_count": "Mafia count",
+  "start_doctor_count": "Doctor",
+  "start_police_count": "Policeman",
+  "start_killer_count": "Killer",
+  "start_role_innocent": "Your objective is to survive!",
+  "start_role_mafia": "KILL EVERYONE AND SURVIVE! Good luck! \n Your teammates:",
+  "start_role_doctor": "Your objective is to save people from death!",
+  "start_role_police": "Your objective is to find mafia!",
+  "start_role_killer": "Your objective is to kill everyone and survive!",
+  "start_role_mistress": "string"
 }
