add build and even more langs

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,9 +1,9 @@
 {
-  "lang_has_been_set": "Language has been set to English.",
+  "lang_set_success_message": ":flag_gb: The language was successfully set to English!",
 
   "game_error_incorrectGameID": "Game not found! It may have been cancelled or ended.",
-  "game_error_alreadyCreated": "You have already created a game, please cancel it first or wait for autocancel!",
-  "game_error_alreadyJoined": "You have already joined a game, please leave it first!",
+  "game_error_alreadyCreated": ":point_up: You have already created a game, please cancel it first or wait for autocancel!",
+  "game_error_alreadyJoined": ":point_up: You have already joined a game, please leave it first!",
   "game_created_title": "Game Created",
   "game_created_autocancel": "Autocancel",
   "game_created_gameHost": "Game Host",
@@ -16,23 +16,23 @@
   "game_created_button_leave": "ㅤㅤLeaveㅤㅤ",
   "game_created_button_edit": "ㅤEditㅤ",
   "game_created_button_new": "ㅤCreate New Gameㅤ",
-  "game_cancel_error_noAccess": "Sorry, you can't cancel this game because you aren't its host!",
+  "game_cancel_error_noAccess": ":man_gesturing_no: Sorry, you can't cancel this game because you aren't its host!",
   "game_cancel_success_message_aboveEmbed": "The game was cancelled by its host. But you can create another one!",
   "game_cancel_success_message": "The game was cancelled. But you can always create a new one!",
   "game_autocancel_message": "The game was automatically cancelled. But you can create another one!",
-  "game_start_error_noAccess": "Sorry, you can't start this game because you aren't its host!",
-  "game_start_error_notEnoughPlayers": "Not enough players to start the game!",
-  "game_start_error_notEnoughRoles": "Not enough roles to start the game!",
+  "game_start_error_noAccess": ":man_gesturing_no: Sorry, you can't start this game because you aren't its host!",
+  "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Not enough players to start the game!",
+  "game_start_error_notEnoughRoles": ":busts_in_silhouette: Not enough roles to start the game!",
   "game_started_button_endGame": "End Game",
   "game_started_title": "Game Started",
-  "game_end_error_noAccess": "Sorry, you can't end this game because you aren't its host!",
+  "game_end_error_noAccess": ":man_gesturing_no: Sorry, you can't end this game because you aren't its host!",
   "game_end_success_message": "The game was ended. But you can always create a new one!",
   "game_end_success_privateMessage": "The game was ended by its host. But you can create another one!",
   "game_join_error_alreadyJoined": "Don't worry, you are already in the game :wink:",
   "game_join_success_message": ":white_check_mark: You have successfully joined the game!",
   "game_leave_error_alreadyLeft": "Don't worry, you are already out of the game :wink:",
   "game_leave_success_message": ":ballot_box_with_check: You have successfully left the game.",
-  "game_edit_error_noAccess": "Sorry, you can't edit this game because you aren't its host!",
+  "game_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this game because you aren't its host!",
   "game_edit_roles_placeHolder": "Select roles...",
   "game_edit_conditions_placeHolder": "Select game end conditions...",
   "game_edit_success_message": ":white_check_mark: The game was successfully edited!",
@@ -126,14 +126,14 @@
   "condition_create_embedThumbnail_placeHolder": "a crazy kitty image link",
   "condition_create_winRole_label": "Winning Role",
   "condition_create_winRole_placeHolder": "just a winning role name",
-  "condition_create_success_message": "The condition was successfully created:",
+  "condition_create_success_message": ":white_check_mark: The condition was successfully created:",
 
   "condition_view_error_notFound": "Condition not found!",
-  "condition_view_error_noAccess": "Sorry, you can't view this condition!",
+  "condition_view_error_noAccess": ":man_gesturing_no: Sorry, you can't view this condition!",
 
   "condition_edit_select_placeHolder": "Select a condition to edit...",
   "condition_edit_error_notFound": "Condition not found!",
-  "condition_edit_error_noAccess": "Sorry, you can't edit this condition!",
+  "condition_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this condition!",
   "condition_edit_title": "Condition Editing: ",
   "condition_edit_condition_label": "Condition",
   "condition_edit_condition_placeHolder": "your new condition; for more information see _/help -> Scripting_",
@@ -145,12 +145,12 @@
   "condition_edit_embedThumbnail_placeHolder": "your new image link",
   "condition_edit_winRole_label": "Winning Role",
   "condition_edit_winRole_placeHolder": "your new winning role name",
-  "condition_edit_success_message": "The condition was successfully edited:",
+  "condition_edit_success_message": ":white_check_mark: The condition was successfully edited:",
 
   "condition_delete_select_placeHolder": "Select a condition to delete...",
   "condition_delete_error_notFound": "Condition not found!",
-  "condition_delete_error_noAccess": "Sorry, you can't delete this condition!",
-  "condition_delete_success_message": "The condition was successfully deleted.",
+  "condition_delete_error_noAccess": ":man_gesturing_no: Sorry, you can't delete this condition!",
+  "condition_delete_success_message": ":ballot_box_with_check: The condition was successfully deleted.",
 
   "error_premium": "Sorry, you don't have Premium to create custom roles and conditions!",
   "error_unknown": "An error has occurred, please contact the support!",
