--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -1,9 +1,9 @@
 {
-  "lang_has_been_set": "Язык изменён на русский!",
+  "lang_set_success_message": ":united_nations: Язык успешно изменён на русский!",
 
   "game_error_incorrectGameID": "Игра не найдена! Возможно, она была отменена или закончена.",
-  "game_error_alreadyCreated": "Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
-  "game_error_alreadyJoined": "Вы уже присоединились к одной игре, сначала покиньте её!",
+  "game_error_alreadyCreated": ":point_up: Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
+  "game_error_alreadyJoined": ":point_up: Вы уже присоединились к одной игре, сначала покиньте её!",
   "game_created_title": "Игра создана",
   "game_created_autocancel": "Автоотмена",
   "game_created_gameHost": "Организатор игры",
@@ -16,23 +16,23 @@
   "game_created_button_leave": "ㅤㅤПокинутьㅤㅤ",
   "game_created_button_edit": "ㅤИзменитьㅤ",
   "game_created_button_new": "Создать новую игру",
-  "game_cancel_error_noAccess": "Извините, вы не можете отменить эту игру, потому что не являетесь её организатором!",
+  "game_cancel_error_noAccess": ":man_gesturing_no: Извините, вы не можете отменить эту игру, потому что не являетесь её организатором!",
   "game_cancel_success_message_aboveEmbed": "Игра отменена организатором. Но вы можете создать другую!",
   "game_cancel_success_message": "Игра отменена. Но всегда можно создать новую!",
   "game_autocancel_message": "Игра автоматически отменена. Но вы можете создать другую!",
-  "game_start_error_noAccess": "Извините, вы не можете начать эту игру, потому что не являетесь её организатором!",
-  "game_start_error_notEnoughPlayers": "Недостаточно игроков для начала игры!",
-  "game_start_error_notEnoughRoles": "Недостаточно ролей для начала игры!",
+  "game_start_error_noAccess": ":man_gesturing_no: Извините, вы не можете начать эту игру, потому что не являетесь её организатором!",
+  "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Недостаточно игроков для начала игры!",
+  "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостаточно ролей для начала игры!",
   "game_started_button_endGame": "Закончить игру",
   "game_started_title": "Игра начата",
-  "game_end_error_noAccess": "Извините, вы не можете закончить эту игру, потому что не являетесь её организатором!",
+  "game_end_error_noAccess": ":man_gesturing_no: Извините, вы не можете закончить эту игру, потому что не являетесь её организатором!",
   "game_end_success_message": "Игра закончена. Но всегда можно создать новую!",
   "game_end_success_privateMessage": "Игра закончена организатором. Но вы можете создать другую!",
   "game_join_error_alreadyJoined": "Не переживайте, вы уже в игре :wink:",
   "game_join_success_message": ":white_check_mark: Вы успешно присоединились к игре!",
   "game_leave_error_alreadyLeft": "Не переживайте, вы и так не в игре :wink:",
   "game_leave_success_message": ":ballot_box_with_check: Вы успешно покинули игру.",
-  "game_edit_error_noAccess": "Извините, вы не можете изменять эту игру, потому что не являетесь её организатором!",
+  "game_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять эту игру, потому что не являетесь её организатором!",
   "game_edit_roles_placeHolder6": "Выберите роли...",
   "game_edit_conditions_placeHolder": "Выберите условия окончания игры...",
   "game_edit_success_message": ":white_check_mark: Игра успешно изменена!",
@@ -125,14 +125,14 @@
   "condition_create_embedThumbnail_placeHolder": "ссылка на изображение с умопомрачительным котёнком",
   "condition_create_winRole_label": "Роль, которая побеждает",
   "condition_create_winRole_placeHolder": "просто название роли, которая побеждает",
-  "condition_create_success_message": "Условие успешно создано:",
+  "condition_create_success_message": ":white_check_mark: Условие успешно создано:",
 
   "condition_view_error_notFound": "Условие не найдено!",
-  "condition_view_error_noAccess": "Извините, вы не можете просматривать это условие!",
+  "condition_view_error_noAccess": ":man_gesturing_no: Извините, вы не можете просматривать это условие!",
 
   "condition_edit_select_placeHolder": "Выберите условие для изменения...",
   "condition_edit_error_notFound": "Условие не найдено!",
-  "condition_edit_error_noAccess": "Извините, вы не можете изменять это условие!",
+  "condition_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять это условие!",
   "condition_edit_title": "Изменение условия: ",
   "condition_edit_condition_label": "Условие",
   "condition_edit_condition_placeHolder": "ваше новое условие; дополнительная информация в _/help -> Scripting_",
@@ -144,12 +144,12 @@
   "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
   "condition_edit_winRole_label": "Роль, которая побеждает",
   "condition_edit_winRole_placeHolder": "название вашей новой роли, которая побеждает",
-  "condition_edit_success_message": "Условие успешно изменено:",
+  "condition_edit_success_message": ":white_check_mark: Условие успешно изменено:",
 
   "condition_delete_select_placeHolder": "Выберите условие для удаления...",
   "condition_delete_error_notFound": "Условие не найдено!",
-  "condition_delete_error_noAccess": "Извините, вы не можете удалить это условие!",
-  "condition_delete_success_message": "Условие успешно удалено.",
+  "condition_delete_error_noAccess": ":man_gesturing_no: Извините, вы не можете удалить это условие!",
+  "condition_delete_success_message": ":ballot_box_with_check: Условие успешно удалено.",
 
   "error_premium": "Извините, у вас нет Premium, чтобы создавать собственные роли и условия!",
   "error_unknown": "Произошла ошибка, пожалуйста, обратитесь в службу поддержки!",
