--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,9 +1,9 @@
 {
-  "lang_has_been_set": "Успішно встановлено українську!.",
+  "lang_set_success_message": ":flag_ua: Мову успішно змінено на українську!",
 
   "game_error_incorrectGameID": "Гру не знайдено! Можливо, її було скасовано чи закінчено.",
-  "game_error_alreadyCreated": "Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
-  "game_error_alreadyJoined": "Ви вже приєдналися до однієї гри, спочатку залиште її!",
+  "game_error_alreadyCreated": ":point_up: Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
+  "game_error_alreadyJoined": ":point_up: Ви вже приєдналися до однієї гри, спочатку залиште її!",
   "game_created_title": "Гру створено",
   "game_created_autocancel": "Автоскасування",
   "game_created_gameHost": "Організатор гри",
@@ -16,23 +16,23 @@
   "game_created_button_leave": "ㅤㅤЗалишитиㅤ",
   "game_created_button_edit": "ㅤЗмінитиㅤ",
   "game_created_button_new": "Створити нову гру",
-  "game_cancel_error_noAccess": "Вибачте, ви не можете скасувати цю гру, бо не є її організатором!",
+  "game_cancel_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете скасувати цю гру, бо не є її організатором!",
   "game_cancel_success_message_aboveEmbed": "Гру скасовано організатором. Але ви можете створити іншу!",
   "game_cancel_success_message": "Гру скасовано. Але завжди можна створити іншу!",
   "game_autocancel_message": "Гру автоматично скасовано. Але ви можете створити іншу!",
-  "game_start_error_noAccess": "Вибачте, ви не можете розпочати цю гру, бо не є її організатором!",
-  "game_start_error_notEnoughPlayers": "Недостатньо гравців для початку гри!",
-  "game_start_error_notEnoughRoles": "Недостатньо ролей для початку гри!",
+  "game_start_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете розпочати цю гру, бо не є її організатором!",
+  "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Недостатньо гравців для початку гри!",
+  "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостатньо ролей для початку гри!",
   "game_started_button_endGame": "Закінчити гру",
   "game_started_title": "Гру почато",
-  "game_end_error_noAccess": "Вибачте, ви не можете закінчити цю гру, бо не є її організатором!",
+  "game_end_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете закінчити цю гру, бо не є її організатором!",
   "game_end_success_message": "Гру закінчено. Але завжди можна створити іншу!",
   "game_end_success_privateMessage": "Гру закінчено організатором. Але ви можете створити іншу!",
   "game_join_error_alreadyJoined": "Не хвилюйтеся, ви вже в грі :wink:",
   "game_join_success_message": ":white_check_mark: Ви успішно приєдналися до гри!",
   "game_leave_error_alreadyLeft": "Не хвилюйтеся, ви й так не в грі :wink:",
   "game_leave_success_message": ":ballot_box_with_check: Ви успішно залишили гру.",
-  "game_edit_error_noAccess": "Вибачте, ви не можете змінювати цю гру, бо не є її організатором!",
+  "game_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю гру, бо не є її організатором!",
   "game_edit_roles_placeHolder": "Оберіть ролі...",
   "game_edit_conditions_placeHolder": "Оберіть умови завершення гри...",
   "game_edit_success_message": ":white_check_mark: Гру успішно змінено!",
@@ -125,14 +125,14 @@
   "condition_create_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
   "condition_create_winRole_label": "Роль, що перемагає",
   "condition_create_winRole_placeHolder": "просто назва ролі, що перемагає",
-  "condition_create_success_message": "Умову успішно створено:",
+  "condition_create_success_message": ":white_check_mark: Умову успішно створено:",
 
   "condition_view_error_notFound": "Умову не знайдено!",
-  "condition_view_error_noAccess": "Вибачте, ви не можете переглядати цю умову!",
+  "condition_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю умову!",
 
   "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_error_notFound": "Умову не знайдено!",
-  "condition_edit_error_noAccess": "Вибачте, ви не можете змінювати цю умову!",
+  "condition_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю умову!",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
   "condition_edit_condition_placeHolder": "ваша нова умова, додаткова інформація в _/help -> Scripting_",
@@ -144,12 +144,12 @@
   "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
   "condition_edit_winRole_label": "Роль, що перемагає",
   "condition_edit_winRole_placeHolder": "назва вашої нової ролі, що перемагає",
-  "condition_edit_success_message": "Умову успішно змінено:",
+  "condition_edit_success_message": ":white_check_mark: Умову успішно змінено:",
 
   "condition_delete_select_placeHolder": "Оберіть умову для видалення...",
   "condition_delete_error_notFound": "Умову не знайдено!",
-  "condition_delete_error_noAccess": "Вибачте, ви не можете видалити цю умову!",
-  "condition_delete_success_message": "Умову успішно видалено.",
+  "condition_delete_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете видалити цю умову!",
+  "condition_delete_success_message": ":ballot_box_with_check: Умову успішно видалено.",
 
   "error_premium": "Вибачте, у вас немає Premium, щоб створювати власні ролі та умови!",
   "error_unknown": "Сталася помилка, будь ласка, зверніться до служби підтримки!",
